@@ -5,6 +5,9 @@ checkbox (0.15.4) raring; urgency=low
   * scripts/sources_test - modified script so that it takes sources list
     location and repository list as arguments
 
+  [ Daniel Manrique ]
+  * Added pipefail option to a few jobs using ansi_parser (LP: #1131598)
+
  -- Brendan Donegan <brendan.donegan@canonical.com>  Mon, 18 Feb 2013 14:35:27 +0000
 
 checkbox (0.15.3) raring; urgency=low
